--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,6 +16,6 @@ permissions:
 jobs:
 
   build:
-    uses: ./.github/workflows/build.yml
+    uses: ./.github/workflows/publish.yml
     with:
       build-artifacts: true
