--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,11 @@ jobs:
         with:
           node-version: 20
 
+      - name: setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
 
