--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "moddedboost"
 version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "Modded Boost Launcher"
+authors = ["descatal"]
 license = ""
 repository = ""
 edition = "2021"
@@ -13,9 +13,14 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = ["shell-open"] }
+tauri = { version = "1.5", features = [ "path-all", "dialog-all", "fs-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+notify = "6.1.1"
+notify-debouncer-full = "0.3.1"
+walkdir = "2"
+tokio = { version = "1.35.1", features = [ "full" ] } 
+serde_yaml = "0.9.30"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
