--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ notify-debouncer-full = "0.3.1"
 walkdir = "2"
 tokio = { version = "1.35.1", features = [ "full" ] } 
 serde_yaml = "0.9.30"
+tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
