Reworked game launching
- Now relies on rpcs3's own GAMEID identification instead of finding eboot paths ourselves

- Made the process asynchronous as to not block the UI when the game is running

- Slightly refactored rpcs3 game path so that the rpcs3's os version logic is shared

- Added visual clues for game versions that are not found

- Added chmod +x command line to make AppImage executable (not tested yet)

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { version = "1.35.1", features = [ "full" ] }
 serde_yaml = "0.9.30"
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 relative-path = "1.9.2"
+async-process = "2.0.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
