--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next": "^23.7.13",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.303.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -34,6 +35,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
     "tauri-settings": "^0.3.4",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
