--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@kodingdotninja/use-tailwind-breakpoint": "^0.0.5",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -19,13 +20,20 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tauri-apps/api": "^1.5.2",
+    "@tauri-apps/api": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-dialog": "2.0.0-beta.1",
+    "@tauri-apps/plugin-fs": "2.0.0-beta.1",
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-store": "2.0.0-beta.1",
+    "@tauri-apps/plugin-upload": "2.0.0-beta.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "crc32": "^0.2.2",
     "i18next": "^23.7.13",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
@@ -36,12 +44,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.0",
+    "react-icons": "^5.0.1",
     "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.22.1",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
-    "tauri-plugin-upload-api": "github:tauri-apps/tauri-plugin-upload#v1",
     "tauri-settings": "^0.3.4",
     "use-debounce": "^10.0.0",
     "vaul": "^0.8.0",
@@ -49,7 +57,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.8",
+    "@tauri-apps/cli": "2.0.0-beta.3",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.15",
