--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@tauri-apps/api": "^2.0.0-beta.0",
     "@tauri-apps/plugin-dialog": "2.0.0-beta.1",
     "@tauri-apps/plugin-fs": "2.0.0-beta.1",
+    "@tauri-apps/plugin-process": "2.0.0-beta.1",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.0",
     "@tauri-apps/plugin-store": "2.0.0-beta.1",
+    "@tauri-apps/plugin-updater": "2.0.0-beta.1",
     "@tauri-apps/plugin-upload": "2.0.0-beta.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -39,6 +41,7 @@
     "i18next-http-backend": "^2.4.2",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.303.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
