--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,12 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 [dependencies]
 tauri = { version = "2.0.0-beta", features = ["unstable"] }
 tauri-plugin-shell = "2.0.0-beta"
+tauri-plugin-updater = "2.0.0-beta"
+tauri-plugin-dialog = "2.0.0-beta.1"
+tauri-plugin-app = "2.0.0-alpha.2"
+tauri-plugin-fs = "2.0.0-beta.1"
+tauri-plugin-store = "2.0.0-beta"
+tauri-plugin-upload = "2.0.0-beta"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 notify = "6.1.1"
@@ -26,8 +32,6 @@ notify-debouncer-full = "0.3.1"
 walkdir = "2"
 tokio = { version = "1.35.1", features = [ "full" ] } 
 serde_yaml = "0.9.30"
-tauri-plugin-store = "2.0.0-beta"
-tauri-plugin-upload = "2.0.0-beta"
 relative-path = "1.9.2"
 async-process = "2.0.1"
 md5 = "0.7.0"
@@ -38,9 +42,6 @@ futures-util = "0.3.30"
 tokio-util = "0.7.10"
 configparser = "3.0.4"
 sysinfo = "0.30.5"
-tauri-plugin-dialog = "2.0.0-beta.1"
-tauri-plugin-app = "2.0.0-alpha.2"
-tauri-plugin-fs = "2.0.0-beta.1"
 same-file = "1.0.6"
 
 [features]
