--- a/src-tauri/resources/tools/rclone/rclone.conf
+++ b/src-tauri/resources/tools/rclone/rclone.conf
@@ -11,3 +11,16 @@ type = drive
 root_folder_id = 1GEwFx4AwcXfn5proOQDYC5e5c7sGFjsE
 team_drive = 
 
+[qiniu-internal]
+type = s3
+provider = Qiniu
+env_auth = true
+access_key_id = aoqhueaV2WQAj4DTsLkM3IGg0Peu11I8xCVfO4aU
+secret_access_key = NHjGKfH-kYHHBINcSymmvnKiy6A6Vqed42m4n4TJ
+acl = private
+region = ap-southeast-1
+endpoint = s3-ap-southeast-1.qiniucs.com
+
+[qiniu]
+type = alias
+remote = qiniu-internal:matrix-snippet-suspense/matrix-snippet-suspense
