--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tauri-apps/api": "^2.0.0-beta.0",
     "@tauri-apps/plugin-dialog": "2.0.0-beta.1",
     "@tauri-apps/plugin-fs": "2.0.0-beta.1",
+    "@tauri-apps/plugin-log": "2.0.0-beta.2",
     "@tauri-apps/plugin-process": "2.0.0-beta.1",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.0",
     "@tauri-apps/plugin-store": "2.0.0-beta.1",
