--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ tauri-plugin-app = "2.0.0-alpha.2"
 tauri-plugin-fs = "2.0.0-beta.1"
 tauri-plugin-store = "2.0.0-beta"
 tauri-plugin-upload = "2.0.0-beta"
+log = "^0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 notify = "6.1.1"
@@ -43,6 +44,7 @@ tokio-util = "0.7.10"
 configparser = "3.0.4"
 sysinfo = "0.30.5"
 same-file = "1.0.6"
+dircpy = "0.3.16"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
