Added China support
- Fixing a bug with psarc file not able to be packed if the user's temporary path includes spaces.
- Updated BoostStudio.Console-win-x86.exe version to now be more verbose and logging
- Updated version to 0.2.2

--- a/src-tauri/resources/tools/rclone/rclone.conf
+++ b/src-tauri/resources/tools/rclone/rclone.conf
@@ -14,13 +14,13 @@ team_drive =
 [qiniu-internal]
 type = s3
 provider = Qiniu
-env_auth = true
-access_key_id = aoqhueaV2WQAj4DTsLkM3IGg0Peu11I8xCVfO4aU
-secret_access_key = NHjGKfH-kYHHBINcSymmvnKiy6A6Vqed42m4n4TJ
-acl = private
-region = ap-southeast-1
-endpoint = s3-ap-southeast-1.qiniucs.com
+access_key_id = DHzig3fw25ReuQUqJL34kJNVRaba5_CKriF6xZxz
+secret_access_key = nKJjHXw3WEawDBILPuinpzfS7vt-lfLEsHqhDNAU
+region = cn-south-1
+endpoint = s3-cn-south-1.qiniucs.com
+acl = public-read
+location_constraint = cn-south-1
 
 [qiniu]
 type = alias
-remote = qiniu-internal:matrix-snippet-suspense/matrix-snippet-suspense
+remote = qiniu-internal:moddboost
