- Improved BLJS and NPJB game detection   - BLJS now needs the path defined in games.yml to have PS3_GAMES/PARAM.SFO file exist too to be considered installed   - NPJB now needs EBOOT.BIN to be present on USRDIR to be considered as installed (Due to DLC requiring NPJB be installed) - Reworked dlc unlocking, now it "installs" NPJB too - Fixed a bug where patch_config.yml with All: true schema can't be parsed - Made patch activation failed error message to redirect to manual patch activation

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -45,6 +45,7 @@ configparser = "3.0.4"
 sysinfo = "0.30.5"
 same-file = "1.0.6"
 dircpy = "0.3.16"
+fix_float = { version = "0.1.4", features = ["serde"] } 
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
