--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tauri-apps/plugin-dialog": "2.0.0-beta.1",
     "@tauri-apps/plugin-fs": "2.0.0-beta.1",
     "@tauri-apps/plugin-log": "2.0.0-beta.2",
+    "@tauri-apps/plugin-os": "2.0.0-beta.6",
     "@tauri-apps/plugin-process": "2.0.0-beta.1",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.0",
     "@tauri-apps/plugin-store": "2.0.0-beta.1",
