--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,9 +18,9 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
 tauri = { version = "2.0.0-beta", features = ["unstable"] }
-tauri-plugin-shell = "2.0.0-beta"
+tauri-plugin-shell = "2.0.0-beta.7"
 tauri-plugin-updater = "2.0.0-beta"
-tauri-plugin-dialog = "2.0.0-beta.1"
+tauri-plugin-dialog = "2.0.0-beta.9"
 tauri-plugin-app = "2.0.0-alpha.2"
 tauri-plugin-fs = "2.0.0-beta.1"
 tauri-plugin-store = "2.0.0-beta"
@@ -46,6 +46,7 @@ sysinfo = "0.30.5"
 same-file = "1.0.6"
 dircpy = "0.3.16"
 fix_float = { version = "0.1.4", features = ["serde"] } 
+tauri-plugin-os = "2.0.0-beta.7"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
