feat: added proper beta switch support

--- a/src-tauri/resources/tools/rclone/rclone.conf
+++ b/src-tauri/resources/tools/rclone/rclone.conf
@@ -24,3 +24,7 @@ location_constraint = cn-south-1
 [qiniu]
 type = alias
 remote = qiniu-internal:moddboost
+
+[qiniu-beta]
+type = alias
+remote = qiniu-internal:moddboost-beta
