--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,43 +8,50 @@ on:
 
 jobs:
   build-tauri:
+    needs: create-release
     permissions:
       contents: write
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-20.04, windows-latest]
+        platform: [ windows-latest, ubuntu-latest ] # macos-latest
 
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
-      - name: install Rust stable
+      - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
 
-      - name: install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-20.04'
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: v2 -> v2/target
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
+          cache-dependency-path: v2/package-lock.json
+
+      - name: Install apt dependencies (ubuntu only)
+        if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+          sudo apt install -y --no-install-recommends libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev patchelf
 
-      - name: install frontend dependencies
-        run: pnpm install # change this to npm or pnpm depending on which one you use
+      - name: Install pnpm
+        run: npm install -g pnpm
 
-      - uses: JonasKruckenberg/tauri-build@v1.5.11
-        id: tauri_build
+      - name: Install frontend dependencies
+        run: pnpm install
 
-      - uses: actions/upload-artifact@v3
+      - name: Build the app
+        uses: tauri-apps/tauri-action@v0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: artifacts
-          path: "${{ join(fromJSON(steps.tauri_build.outputs.artifacts), '\n') }}"
+          releaseId: ${{ needs.create-release.outputs.release_id }}
