--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,3 +57,19 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
+
+      - name: Upload artifacts (windows-x64)
+        if: ${{ matrix.os == 'windows-latest' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: moddedboost-alpha-windows-x64
+          path: ./src-tauri/target/release/bundle
+          if-no-files-found: error
+
+      - name: Upload artifacts (linux-x64)
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: moddedboost-alpha-linux-x64
+          path: ./src-tauri/target/release/bundle
+          if-no-files-found: error
