ci: fixing artifact upload

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,8 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         with:
-          releaseId: ${{ needs.create-release.outputs.release_id }}
+          args: --debug
+#          releaseId: ${{ needs.create-release.outputs.release_id }}
 
       - name: Upload artifacts (windows-x64)
         if: ${{ matrix.platform == 'windows-latest' }}
